# nixos-config

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .todo.md  README.md  flake.nix  install.sh
.cache/nix/: fetcher-cache-v4.sqlite
hosts/desktop/: default.nix  hardware-configuration.nix
hosts/laptop/: default.nix  hardware-configuration.nix
hosts/vm/: default.nix  hardware-configuration.nix
modules/: _devshell.nix  defaults.nix  den.nix  dendritic.nix  devshell.nix  namespace.nix  systems.nix  user.nix
modules/aspects/: _plasma.nix  _sunshine.nix  aagl.nix  activitywatch.nix  audio.nix  bluetooth.nix  bluevein.nix  bootloader.nix  browser.nix  catppuccin.nix  dank.nix  desktop-tools.nix  development.nix  discord.nix  editor.nix  flatpak.nix  gaming.nix  gpu-screen-recorder.nix  greetd.nix  hardware.nix  home-services.nix  librepods.nix  media-apps.nix  memory.nix  monado.nix  network.nix  noctalia.nix  nvidia.nix  packages.nix  plasma.nix  programs.nix  rycharger.nix  scripts.nix  secrets.nix  security.nix  services.nix  shell.nix  spicetify.nix  star-citizen.nix  system-x86.nix  (+5 more)
modules/core/: aagl.nix  age.nix  bluetooth.nix  bluevein.nix  bootloader.nix  default.nix  desktop-services.nix  gpu-screen-recorder.nix  greetd.nix  hardware-acceleration.nix  hardware.nix  looking-glass-client.nix  memory.nix  monado.nix  network.nix  nixarr.nix  nvidia.nix  pipewire.nix  (+14 more)
rust/: Cargo.toml
rust/src/2554.maximum-number-of-integers-to-choose-from-a-range-i/: solution.rs
secrets/: cross-seed.age  pia.age  secrets.nix  steam_key.age  transmission-rpc.age
(+97 files in other folders)
