[[bin]]
name = 'maximum-number-of-integers-to-choose-from-a-range-i'
path = 'src/2554.maximum-number-of-integers-to-choose-from-a-range-i/solution.rs'

[dependencies]
anyhow = '1.0.79'
leetgo-rs = '0.2.1'
serde = '1.0.196'
serde_json = '1.0.113'

[package]
edition = '2021'
name = 'leetcode-solutions'
version = '0.1.0'
